[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/name_font.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.172549, 0.184314, 0.290196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.054902, 0.054902, 0.0823529, 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.172549, 0.184314, 0.290196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.054902, 0.054902, 0.0823529, 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.964
margin_bottom = 12.96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.388235, 0.4, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Control" parent="CanvasLayer/ColorRect"]
margin_left = 140.861
margin_top = 83.8513
margin_right = 180.861
margin_bottom = 123.851
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameText" type="RichTextLabel" parent="CanvasLayer/ColorRect/Username"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.0
margin_top = 15.0
margin_right = 45.0
margin_bottom = 0.000305176
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]username:[/right]"
text = "username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="TextEdit" parent="CanvasLayer/ColorRect/Username"]
margin_left = 87.5862
margin_top = 2.96145
margin_right = 282.586
margin_bottom = 42.9614
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "junko"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Control" parent="CanvasLayer/ColorRect"]
margin_left = 140.861
margin_top = 136.513
margin_right = 180.861
margin_bottom = 176.513
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortText" type="RichTextLabel" parent="CanvasLayer/ColorRect/Port"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.571
margin_top = 11.9747
margin_right = 45.4289
margin_bottom = -3.02531
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]port:[/right]"
text = "port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortInput" type="TextEdit" parent="CanvasLayer/ColorRect/Port"]
margin_left = 87.5862
margin_right = 282.586
margin_bottom = 40.0
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "25565"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Control" parent="CanvasLayer/ColorRect"]
margin_left = 140.861
margin_top = 187.958
margin_right = 180.861
margin_bottom = 227.958

[node name="IPText" type="RichTextLabel" parent="CanvasLayer/ColorRect/IP"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = 12.0
margin_right = 44.0
margin_bottom = -8.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]ip:[/right]"
text = "ip:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPInput" type="TextEdit" parent="CanvasLayer/ColorRect/IP"]
margin_left = 87.5862
margin_top = -0.476357
margin_right = 282.586
margin_bottom = 39.5236
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 269.807
margin_top = 44.4117
margin_right = -240.193
margin_bottom = -289.588
custom_fonts/normal_font = ExtResource( 2 )
text = "monkeyball 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 257.0
margin_top = 263.2
margin_right = 392.0
margin_bottom = 299.2
theme = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CanvasLayer/ColorRect/PlayButton" to="CanvasLayer" method="_on_Button_button_down"]
